--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             for (let i = 0; i < rows; i++) {
                 tableContent += '<tr>';
                 for (let j = 0; j < cols; j++) {
-                    tableContent += '<td class="interactive-element"></td>';
+                    tableContent += '<td class="interactive-element">@</td>';
                 }
                 tableContent += '</tr>';
             }
