--- a/index.html
+++ b/index.html
@@ -2,64 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Split into Cells</title>
     <style>
-        body, html {
+        table {
+            border-collapse: collapse;
             margin: 0;
             padding: 0;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
         }
-
-        #image-table {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, 10px);
-            grid-template-rows: repeat(auto-fill, 10px);
-            width: 100vw;
-            height: 100vh;
+        tr {
+            padding: 0;
+            margin: 0;
         }
-
+        td {
+            width: 10px;
+            height: 10px;
+            padding: 0;
+            margin: 0;
+        }
         .cell {
             width: 10px;
             height: 10px;
-        }
-
-        .cell div {
-            width: 100%;
-            height: 100%;
             background-image: url('https://loremflickr.com/1024/1024');
-            background-size: 100vw 100vh; /* Ensure the image covers the full viewport */
+            background-size: 1024px 1024px; /* Adjust to your image dimensions */
             background-repeat: no-repeat;
         }
     </style>
 </head>
 <body>
 
-<div id="image-table">
-    <!-- Cells will be added dynamically by JS -->
-</div>
+<table id="imageTable" role="grid" cellspacing="0" cellpadding="0">
+    <!-- Cells will be generated dynamically -->
+</table>
 
 <script>
-    const imageTable = document.getElementById('image-table');
-    const cols = Math.floor(window.innerWidth / 10);
-    const rows = Math.floor(window.innerHeight / 10);
+    const table = document.getElementById('imageTable');
+    const cellSize = 10; // Size of each cell
+    const imageWidth = 800; // Width of your image
+    const imageHeight = 600; // Height of your image
 
-    for (let row = 0; row < rows; row++) {
-        for (let col = 0; col < cols; col++) {
-            const cell = document.createElement('div');
-            cell.classList.add('cell');
+    const cols = imageWidth / cellSize;
+    const rows = imageHeight / cellSize;
 
-            const div = document.createElement('div');
-            // Position the image slice correctly for each cell
-            div.style.backgroundPosition = `-${col * 10}px -${row * 10}px`;
+    for (let r = 0; r < rows; r++) {
+        const row = document.createElement('tr');
+        row.setAttribute('role', 'row');
 
-            cell.appendChild(div);
-            imageTable.appendChild(cell);
+        for (let c = 0; c < cols; c++) {
+            const cell = document.createElement('td');
+            cell.setAttribute('role', 'gridcell');
+            cell.className = 'cell';
+
+            // Set the background position to display the correct part of the image
+            cell.style.backgroundPosition = `-${c * cellSize}px -${r * cellSize}px`;
+
+            // Add click event to alert "boo!"
+            cell.onclick = function() {
+                alert('x:' + c.toString() + " y: "+ r.toString());
+            };
+
+            row.appendChild(cell);
         }
+        table.appendChild(row);
     }
 </script>
 
